--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "formik": "^2.4.6",
     "googleapis": "^144.0.0",
+    "mongoose": "^8.9.2",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
